# Tests

./: .gitignore  README.md  pyproject.toml
src/test_package/: __init__.py  example.py  factorial.py
tests/: test_example.py  test_factorial.py  test_various.py
