[project]
name = "test_package"
version = "0.1.0"
description = "A test package"
authors = [{ name = "Dimitrios Simatos" }]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://example.com"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"] # pythonpath points to package source code directory

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"