[project] # project metadata
name = "test_package"
version = "0.1.0"
description = "A test package to test the functionality of pytest."
authors = [{ name = "Dimitrios Simatos" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # runtime dependencies go here

[dependency-groups] # uv configuration
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.0.350",
]  # dev-only deps (linting + testing)

[tool.pytest.ini_options] # pytest configuration
testpaths = ["tests"] # points to the test directory
pythonpath = ["src"]  # points to the package source

[tool.ruff] # ruff configuration
line-length = 88
target-version = "py313"

[tool.ruff.lint] # linting rules
select = ["F", "E", "W", "I", "B"]
ignore = []

[build-system] # build system configuration
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
